@@ -1,3 +1,13 @@
+Wed Sep  7 18:07:24 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/CodecFactory/CodecFactory.h:
+        * tao/CodecFactory/CodecFactory.cpp:
+        * tao/CodecFactory/CodecFactory.mpc:
+          export file is now generated by tao_idl
+
+        * tao/CodecFactory/codecfactory_export.h:
+          Removed this file.
+
 Wed Sep  7 17:31:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/BiDir_GIOP/BiDirGIOP.h:
